--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
-<manifest android:installLocation="auto" android:versionCode="1" xmlns:android="http://schemas.android.com/apk/res/android" package="de.sinicyn.filepile" android:versionName="1.0">
-    <application android:label="@string/app_name" android:hardwareAccelerated="true" android:name="org.qtproject.qt5.android.bindings.QtApplication" android:icon="@drawable/icon">
-        <activity android:screenOrientation="unspecified" android:label="@string/app_name" android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation" android:name="org.qtproject.qt5.android.bindings.QtActivity">
+<manifest android:versionCode="0" android:installLocation="auto" package="de.sinicyn.filepile" android:versionName="0.1" xmlns:android="http://schemas.android.com/apk/res/android">
+    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:icon="@drawable/icon" android:label="@string/app_name" android:hardwareAccelerated="true">
+        <activity android:name="org.qtproject.qt5.android.bindings.QtActivity" android:screenOrientation="unspecified" android:label="@string/app_name" android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -34,7 +34,7 @@
         </activity>
     </application>
     <uses-sdk android:targetSdkVersion="14" android:minSdkVersion="9"/>
-    <supports-screens android:anyDensity="true" android:smallScreens="true" android:largeScreens="true" android:normalScreens="true"/>
+    <supports-screens android:normalScreens="true" android:smallScreens="true" android:anyDensity="true" android:largeScreens="true"/>
     <!-- The following comment will be replaced upon deployment with default permissions based on the dependencies of the application.
          Remove the comment if you do not require these default permissions. -->
     <!-- %%INSERT_PERMISSIONS -->
